Fixed scrollbar opacity
Former-commit-id: 91de5ecc238d755f60fb5ffa0d85ddd3eddfc4e8

--- a/web_ui/src/App.scss
+++ b/web_ui/src/App.scss
@@ -428,7 +428,6 @@ main {
 
 .ScrollbarsCustom-TrackY {
     width: 5px !important;
-    opacity: 0;
 
     &::hover {
         opacity: 1;
